objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DW_Quarter_Awarded__c</fullName>
        <description>DW Quarter Awarded</description>
        <label>DW Quarter Awarded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012-Q1</fullName>
                </value>
                <value>
                    <fullName>2012-Q2</fullName>
                </value>
                <value>
                    <fullName>2012-Q3</fullName>
                </value>
                <value>
                    <fullName>2012-Q4</fullName>
                </value>
                <value>
                    <fullName>2013-Q1</fullName>
                </value>
                <value>
                    <fullName>2013-Q2</fullName>
                </value>
                <value>
                    <fullName>2013-Q3</fullName>
                </value>
                <value>
                    <fullName>2013-Q4</fullName>
                </value>
                <value>
                    <fullName>2014-Q1</fullName>
                </value>
                <value>
                    <fullName>2014-Q2</fullName>
                </value>
                <value>
                    <fullName>2014-Q3</fullName>
                </value>
                <value>
                    <fullName>2014-Q4</fullName>
                </value>
                <value>
                    <fullName>2015-Q1</fullName>
                </value>
                <value>
                    <fullName>2015-Q2</fullName>
                </value>
                <value>
                    <fullName>2015-Q3</fullName>
                </value>
                <value>
                    <fullName>2015-Q4</fullName>
                </value>
                <value>
                    <fullName>2016-Q1</fullName>
                </value>
                <value>
                    <fullName>2016-Q2</fullName>
                </value>
                <value>
                    <fullName>2016-Q3</fullName>
                </value>
                <value>
                    <fullName>2016-Q4</fullName>
                </value>
                <value>
                    <fullName>2017-Q1</fullName>
                </value>
                <value>
                    <fullName>2017-Q2</fullName>
                </value>
                <value>
                    <fullName>2017-Q3</fullName>
                </value>
                <value>
                    <fullName>2017-Q4</fullName>
                </value>
                <value>
                    <fullName>2018-Q1</fullName>
                </value>
                <value>
                    <fullName>2018-Q2</fullName>
                </value>
                <value>
                    <fullName>2018-Q3</fullName>
                </value>
                <value>
                    <fullName>2018-Q4</fullName>
                </value>
                <value>
                    <fullName>2019-Q1</fullName>
                </value>
                <value>
                    <fullName>2019-Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_DW_Submitted_for_PLM_Review__c</fullName>
        <inlineHelpText>Date DW Submitted for PLM Review</inlineHelpText>
        <label>Date DW Submitted for PLM Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Approved__c</fullName>
        <label>Date Design Win Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Decided_by_SVP_Sales__c</fullName>
        <inlineHelpText>Date the Design Win was approved or rejected by the SVP of Sales.</inlineHelpText>
        <label>Date Design Win Decided by SVP Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Process_Reach_100__c</fullName>
        <label>Date Design Win Process Reach 100%</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Recommended__c</fullName>
        <description>This field is used to send Design Win Escalation emails to Strategic Marketing approvers and populated with value when Territory Head approves the Opportunity and cleared out when Strategic Marketing Approves or Reject the request.</description>
        <label>Date Design Win Recommended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Recommended_by_Marketing__c</fullName>
        <inlineHelpText>Date the Design Win was last recommended by Marketing</inlineHelpText>
        <label>Date Design Win Recommended by Marketing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Recommended_by_PLM__c</fullName>
        <label>Date Design Win Recommended by PLM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Rev_d_by_Territory_Head__c</fullName>
        <description>Date the Design Win Award was Reviewed by Territory Head</description>
        <inlineHelpText>Date the Design Win Award was Reviewed by Territory Head</inlineHelpText>
        <label>Date Design Win Rev&apos;d by Territory Head</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Submitted_by_AM__c</fullName>
        <inlineHelpText>Date the Design Win was submitted for approval by the AM.</inlineHelpText>
        <label>Date Design Win Submitted by AM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submit_for_Regional_Head__c</fullName>
        <label>Date Submit for Regional Head</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Review__c</fullName>
        <label>Time Design Win Submitted by AM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Loss_Dropped__c</fullName>
        <description>Whenever Opportunity Lost/Dropped capture datetime</description>
        <label>Date for Loss/Dropped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_Result__c</fullName>
        <label>Deal Grading Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_Status__c</fullName>
        <label>Deal Grading Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Proposal_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision - Proposal Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverable_Part_Type__c</fullName>
        <label>Deliverable Part Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wafer</fullName>
                </value>
                <value>
                    <fullName>Finished Wafer</fullName>
                </value>
                <value>
                    <fullName>Tested Wafer</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Wafer</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demand_Factor__c</fullName>
        <inlineHelpText>Aggregated from the Oppty Issue &quot;Area&quot;</inlineHelpText>
        <label>Blocking Factor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Yield</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_Product_Development_Plan_Score__c</fullName>
        <formula>IF(ISBLANK( Describe_Product_Development_Plan__c ), 0, 0.05)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Describe Product Development Plan Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Describe_Product_Development_Plan__c</fullName>
        <inlineHelpText>This is a required field prior to submission for Design Win Award.</inlineHelpText>
        <label>Describe Product Development Plan (DW)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Enablements_Required__c</fullName>
        <inlineHelpText>Identify the design enablements required for this opportunity. More details description can be identify at individual device level.</inlineHelpText>
        <label>Design Enablements Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDK</fullName>
                </value>
                <value>
                    <fullName>DRC</fullName>
                </value>
                <value>
                    <fullName>SPICE</fullName>
                </value>
                <value>
                    <fullName>Libraries</fullName>
                </value>
                <value>
                    <fullName>Memory Compiler</fullName>
                </value>
                <value>
                    <fullName>General Purpose I/Os</fullName>
                </value>
                <value>
                    <fullName>PLLs</fullName>
                </value>
                <value>
                    <fullName>ADCs/DACs</fullName>
                </value>
                <value>
                    <fullName>High Speed Interface</fullName>
                </value>
                <value>
                    <fullName>DDR/LPDDR</fullName>
                </value>
                <value>
                    <fullName>SERDES/PHY</fullName>
                </value>
                <value>
                    <fullName>eFUSE</fullName>
                </value>
                <value>
                    <fullName>ARM Core</fullName>
                </value>
                <value>
                    <fullName>other IPs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Export_Control_Classification_Num__c</fullName>
        <label>Design Export Control Classification Num</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_AM_Comments__c</fullName>
        <description>Comments by Account Manager</description>
        <label>Design Win$ AM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Win_AM_Manager_s_Comments__c</fullName>
        <label>Design Win$ AM Manager&apos;s Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Win_Confidence__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Design Win Confidence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_FAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Win FAE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Win_Marketing_Comments__c</fullName>
        <label>Design Win$ Marketing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Win_Progress__c</fullName>
        <description>Formula field to track the progress of required Design Win Component</description>
        <formula>DW_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DW Progress Score
Process Platform
GMPL
GF Target Share
Quarterly Rev
1st To Date
1st Prod Date
Yrs of Prod
Describe Product Dev Plan
Is GF Committed
28nm Configuration
Quote # or IQ
ASP align
Using GF PDK
Customer Decision
Commitment Text</inlineHelpText>
        <label>Design Win Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_Win_Ready_2a__c</fullName>
        <formula>IF ((GF_Target_Share_Score__c + Total_Life_Time_Revenue_score__c + Sum_of_Quarterly_Revenue_Score__c + IF(OR(AND(Approved_GMPL_BX009_DW__c != null ,OR(ISPICKVAL( Process_Platform__c, &quot;GF-Full Custom&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Process Transfer&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Co-Developed&quot;))),OR(ISPICKVAL( Process_Platform__c, &quot;GF Baseline&quot;), 
ISPICKVAL( Process_Platform__c, &quot;GF Baseline plus custom modules&quot;))), 0.05, 0) = 0), IMAGE(&quot;/resource/DW_Progress_0&quot;,&quot;&quot;,25,40), 
IF ((GF_Target_Share_Score__c + Total_Life_Time_Revenue_score__c + Sum_of_Quarterly_Revenue_Score__c + IF(OR(AND(Approved_GMPL_BX009_DW__c != null ,OR(ISPICKVAL( Process_Platform__c, &quot;GF-Full Custom&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Process Transfer&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Co-Developed&quot;))),OR(ISPICKVAL( Process_Platform__c, &quot;GF Baseline&quot;), 
ISPICKVAL( Process_Platform__c, &quot;GF Baseline plus custom modules&quot;))), 0.05, 0) &lt; 0.20), IMAGE(&quot;/resource/DW_Progress_50&quot;,&quot;&quot;,25,40), IMAGE(&quot;/resource/DW_Progress_100&quot;,&quot;&quot;,25,40)+ &quot;Section 2a Completed&quot;)) 
+ IF (GF_Target_Share_Score__c = 0, &quot;- Enter GF Target Share - &quot;,&quot;&quot;) 
+ IF ( Sum_of_Quarterly_Revenue_Score__c = 0, &quot;- Enter Quarterly Revenue Forecast in the Related List near bottom -&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GUI indicator describing the readiness for Design Win for items in section 2a.</inlineHelpText>
        <label>Design Win Ready 2a</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Ready_2b__c</fullName>
        <formula>IF ( X1st_Product_To_Date_Score__c + X1st_Product_Production_Date_Score__c + Years_of_Production_score__c + Describe_Product_Development_Plan_Score__c = 0,IMAGE (&quot;/resource/DW_Progress_0&quot;,&quot;&quot;,30,50)+&quot;Complete Fields with (DW)&quot;, 

IF ( X1st_Product_To_Date_Score__c + X1st_Product_Production_Date_Score__c + Years_of_Production_score__c + Describe_Product_Development_Plan_Score__c &lt; 0.20,
IMAGE (&quot;/resource/DW_Progress_50&quot;,&quot;&quot;,30,50)+&quot;Complete Fields with (DW)&quot;, IMAGE (&quot;resource/DW_Progress_100&quot;,&quot;&quot;,30,50)+ &quot;Section 2b Completed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GUI indicator describing the readiness for Design Win for items in section 2b.</inlineHelpText>
        <label>Design Win Ready 2b</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Ready_3__c</fullName>
        <formula>IF( Is_GF_Committed_Score__c = 0, IMAGE (&quot;/resource/DW_Progress_0&quot;,&quot;&quot;,30,50)+ &quot;Indicate Is GF Committed to Process&quot;, 

IF ( 

AND(OR(ISPICKVAL(Process_Geometry__c , &quot;0.014UM&quot;), 
ISPICKVAL(Process_Geometry__c , &quot;0.028UM&quot;), 
ISPICKVAL(Process_Geometry__c , &quot;0.040UM&quot;), 
ISPICKVAL(Process_Geometry__c , &quot;0.045UM&quot;)), Apttus_Configuration_Score__c = 0), IMAGE (&quot;/resource/DW_Progress_50&quot;,&quot;&quot;,30,50)+&quot;For 14nm,28nm,40nm,45nm Approved Configuration is required in any Device under the Opportunity&quot;,IMAGE (&quot;/resource/DW_Progress_100&quot;,&quot;&quot;,30,50)+ &quot;Section 3 Completed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Win Ready 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Ready_4a__c</fullName>
        <formula>IF ( Customer_Decision_Maker_Score__c + Paste_Commitment_Txt_from_Customer_Score__c + Using_GF_PDK_DRC_or_SPICE_Score__c + Quote_score__c + Does_Entered_ASP_Align_with_Quote_Score__c = 0,IMAGE (&quot;/resource/DW_Progress_0&quot;,&quot;&quot;,30,50)+&quot;Complete Fields with (DW)&quot;, 

IF ( Customer_Decision_Maker_Score__c + Paste_Commitment_Txt_from_Customer_Score__c + Using_GF_PDK_DRC_or_SPICE_Score__c + Quote_score__c + Does_Entered_ASP_Align_with_Quote_Score__c &lt; 0.45, 
IMAGE (&quot;/resource/DW_Progress_50&quot;,&quot;&quot;,30,50)+&quot;Complete Fields with (DW)&quot;, IMAGE (&quot;/resource/DW_Progress_100&quot;,&quot;&quot;,30,50)+ &quot;Section 4a Completed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Win Ready 4a</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Ready_4b__c</fullName>
        <formula>IF( Territory_Head_for_Review__c = &quot;&quot;, IMAGE (&quot;/resource/DW_Progress_0&quot;,&quot;&quot;,30,50)+ &quot;Select the Territory Head Reviewing Design Win Award&quot;, IMAGE (&quot;/resource/DW_Progress_100&quot;,&quot;&quot;,30,50)+ &quot;Section 4b Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Win Ready 4b</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Region_Override__c</fullName>
        <inlineHelpText>Field editable only by DW Admin to reassign DW Award</inlineHelpText>
        <label>Design Win Region Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-West</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>US-Majors</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US-SoCal</fullName>
                </value>
                <value>
                    <fullName>ASIC-US</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Region__c</fullName>
        <formula>IF(TEXT(Design_Win_Region_Override__c) = NULL, TEXT(Account.Region__c) , TEXT(Design_Win_Region_Override__c) )</formula>
        <inlineHelpText>DS Award set from Account region by default, to override, contact DW Admin.</inlineHelpText>
        <label>Design Win Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue__c</fullName>
        <label>Design Win Revenue</label>
        <summarizedField>Quarterly_Revenue_Object__c.Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Quarterly_Revenue_Object__c.Count__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Quarterly_Revenue_Object__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Design_Win_Review_Status_New__c</fullName>
        <label>Design Win Review Status (New)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend for Approval</fullName>
                </value>
                <value>
                    <fullName>Recommend for Rejection</fullName>
                </value>
                <value>
                    <fullName>Rejected for Resubmission</fullName>
                </value>
                <value>
                    <fullName>Submitted for Recommendation</fullName>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Submitted for PLM Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Review_Status__c</fullName>
        <label>Design Win Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend for Approval</fullName>
                </value>
                <value>
                    <fullName>Recommend for Rejection</fullName>
                </value>
                <value>
                    <fullName>Rejected for Resubmission</fullName>
                </value>
                <value>
                    <fullName>Submitted for Recommendation</fullName>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Submitted for PLM Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Territory_Override__c</fullName>
        <inlineHelpText>Field editable only by DW Admin to reassign DW Territory</inlineHelpText>
        <label>Design Win Territory Override</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Design_Win_Region_Override__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>SEC-Foundry</fullName>
                </value>
                <value>
                    <fullName>MRVL</fullName>
                </value>
                <value>
                    <fullName>NVDA</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Territory__c</fullName>
        <formula>IF (TEXT( Design_Win_Territory_Override__c) = NULL, TEXT( Account.Financial_Territory__c) , TEXT(Design_Win_Territory_Override__c ))</formula>
        <inlineHelpText>DS Award set from Account Territory by default, to override, contact DW Admin.</inlineHelpText>
        <label>Design Win Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_w_NWR_Revenue__c</fullName>
        <inlineHelpText>Projected NRE = Design Win Revenue + Non Wafer Revenue</inlineHelpText>
        <label>Design Win w NWR Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detail_Explanation_of_Win_Loss_Drop__c</fullName>
        <description>As per requested for Case No. 1775</description>
        <label>Detail Explanation of Win/Loss/Drop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_General_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery - General Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery - NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Political_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery - Political Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Entered_ASP_Align_with_Quote_Score__c</fullName>
        <formula>IF(ISPICKVAL( Does_entered_ASP_Align_with_Quote__c , &quot;&quot;), 0,0.05)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Entered ASP Align with Quote Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Does_entered_ASP_Align_with_Quote__c</fullName>
        <inlineHelpText>This is a required field prior to submission for Design Win Award.</inlineHelpText>
        <label>Does entered ASP Align with Quote? (DW)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Application_for_Opty__c</fullName>
        <label>End Application for Opty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Handset</fullName>
                </value>
                <value>
                    <fullName>Mobile PC</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Others - Mobility</fullName>
                </value>
                <value>
                    <fullName>IoT - mThings</fullName>
                </value>
                <value>
                    <fullName>Powertrain</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Driver Information</fullName>
                </value>
                <value>
                    <fullName>Machine Learning</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Others - Automotive</fullName>
                </value>
                <value>
                    <fullName>IoT - Automotive</fullName>
                </value>
                <value>
                    <fullName>Broadband Client</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Others - CCS</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Smart Card</fullName>
                </value>
                <value>
                    <fullName>Others - IMS</fullName>
                </value>
                <value>
                    <fullName>IoT - Industrial</fullName>
                </value>
                <value>
                    <fullName>Desktop PC</fullName>
                </value>
                <value>
                    <fullName>Set Top Box</fullName>
                </value>
                <value>
                    <fullName>Video Games</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Others - Consumer</fullName>
                </value>
                <value>
                    <fullName>IoT - Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customers__c</fullName>
        <inlineHelpText>Identify the end customers for the program. This is a mandatory field for Resellers and Channel Partners.</inlineHelpText>
        <label>End Customers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Die_X_dim_mm__c</fullName>
        <label>Estimated Die X dim (mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Die_Y_dim_mm__c</fullName>
        <label>Estimated Die Y dim (mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAE_CP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAE_CP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAE_CP3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAE_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAE_last_modified_Date_CP1__c</fullName>
        <label>FAE last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAE_last_modified_Date_CP2__c</fullName>
        <label>FAE last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAE_last_modified_Date_CP3__c</fullName>
        <label>FAE last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAE_last_modified_by_CP1__c</fullName>
        <label>FAE last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAE_last_modified_by_CP2__c</fullName>
        <label>FAE last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>